# accauntant_bot

./: .env  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 04b795c9c4ca_fix_user_column.py  1d1437f07573_migration2.py  73d1fbf2075a_delete_members_from_family.py  b9df8c6be9eb_initial.py  f65933732993_delete_category.py  f878c12b6943_full.py
tg_bot/: __main__.py
tg_bot/data/: config.py  loader.py
tg_bot/database/: connection.py  db_helper.py  models.py  transactions.py
tg_bot/handlers/admin/: bot_started.py
tg_bot/handlers/user/: family_handler.py  family_transaction.py  main_menu.py  registration.py  user_transaction.py
tg_bot/keyboards/: inline.py  reply.py
tg_bot/states/: families_tr.py  family.py  registration_state.py  user_tr.py
